==> siiger/smart-jacket/Software/STM32WB_microcontroller/Drivers/BSP/FRAM_MB85RS_SPI.cpp <==
#include <FRAM_MB85RS_SPI.h>
#include <cmath>

bool FRAM_MB85RS_SPI::read( uint32_t framAddr, uint8_t *value )
{
    if (framAddr >= _maxaddress || !_framInitialised)
        return false;

//#ifdef DEBUG_TRACE
//    Serial.print("Read address : ");
//    Serial.println(framAddr, BIN);
//#endif
    uint8_t spiCMD;

    _csASSERT();
        // Read byte operation
        spiCMD = FRAM_READ;
        HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
        _setMemAddr(&framAddr);
        // Read value
        HAL_SPI_Receive(_hspi, value, sizeof(*value), HAL_MAX_DELAY);
    _csRELEASE();

    _lastaddress = framAddr+1;

    return true;
}

bool FRAM_MB85RS_SPI::read( uint32_t framAddr, uint16_t *value )
{
    if (framAddr >= _maxaddress || !_framInitialised)
        return false;

    uint8_t buffer[2];
    uint8_t spiCMD;

    _csASSERT();
            // Read byte operation
            spiCMD = FRAM_READ;
            HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
        _setMemAddr(&framAddr);
        // Read value
        HAL_SPI_Receive(_hspi, &buffer[0], sizeof(buffer[0]), HAL_MAX_DELAY);
        HAL_SPI_Receive(_hspi, &buffer[1], sizeof(buffer[1]), HAL_MAX_DELAY);
    _csRELEASE();

    *value = ((uint16_t) buffer[1] << 8) + (uint16_t)buffer[0];

    _lastaddress = framAddr+2;

    return true;
}

bool FRAM_MB85RS_SPI::read( uint32_t framAddr, uint32_t *value )
{
    if (framAddr >= _maxaddress || !_framInitialised)
        return false;

    uint8_t buffer[4];
    uint8_t spiCMD;

    _csASSERT();
                  // Read byte operation
                  spiCMD = FRAM_READ;
                  HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
              _setMemAddr(&framAddr);
              // Read value
              HAL_SPI_Receive(_hspi, &buffer[0], sizeof(buffer[0]), HAL_MAX_DELAY);
              HAL_SPI_Receive(_hspi, &buffer[1], sizeof(buffer[1]), HAL_MAX_DELAY);
              HAL_SPI_Receive(_hspi, &buffer[2], sizeof(buffer[2]), HAL_MAX_DELAY);
              HAL_SPI_Receive(_hspi, &buffer[3], sizeof(buffer[3]), HAL_MAX_DELAY);
    _csRELEASE();

    *value = ( (uint32_t)buffer[2] << 16) + ((uint32_t)buffer[1] << 8) + (uint32_t)buffer[0];

    _lastaddress = framAddr+4;

    return true;
}

bool FRAM_MB85RS_SPI::readArray( uint32_t startAddr, uint8_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + nbItems - 1) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;

    uint8_t spiCMD;

    _csASSERT();
    // Read byte operation
    spiCMD = FRAM_READ;
    HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
    _setMemAddr(&startAddr);

    // Read values
    for (uint32_t i = 0; i < nbItems; i++)
    {
        HAL_SPI_Receive(_hspi, &values[i], sizeof(values[i]), HAL_MAX_DELAY);
#ifdef DEBUG_TRACE
        //Serial.print("Adr 0x"); Serial.print(startAddr+i, HEX);
        //Serial.print(", Value[");Serial.print(i); Serial.print("] = 0x"); Serial.println(values[i], HEX);
#endif
    }

    _csRELEASE();



    _lastaddress = startAddr + nbItems - 1;

    return true;
}

bool FRAM_MB85RS_SPI::readArray( uint32_t startAddr, uint16_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + (nbItems*2) - 2) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;

    uint8_t spiCMD;


       _csASSERT();
        // Read byte operation
        spiCMD = FRAM_READ;
        HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
        _setMemAddr(&startAddr);

        // Read values
        for (uint32_t i = 0; i < nbItems; i++)
        {   uint8_t buffer[2];
        	HAL_SPI_Receive(_hspi, &buffer[0], sizeof(buffer[0]), HAL_MAX_DELAY);
        	HAL_SPI_Receive(_hspi, &buffer[1], sizeof(buffer[1]), HAL_MAX_DELAY);
            values[i] = ((uint16_t) buffer[1] << 8) + (uint16_t)buffer[0];

#ifdef DEBUG_TRACE
            //Serial.print("Adr 0x"); Serial.print(startAddr+(i*2), HEX);
            //Serial.print(", Value[");Serial.print(i); Serial.print("] = 0x"); Serial.println(values[i], HEX);
#endif
        }
    _csRELEASE();

    _lastaddress = startAddr + (nbItems*2) - 2;

    return true;
}

bool FRAM_MB85RS_SPI::writeArray( uint32_t startAddr, uint8_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + nbItems - 1) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;

    uint8_t spiCMD;
       // Set Memory Write Enable Latch, otherwise no Write can be achieve
          _csASSERT();
            spiCMD = FRAM_WREN;
            HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
         _csRELEASE();

    // Write byte operation
    _csASSERT();
           spiCMD = FRAM_WRITE;
           HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
         _setMemAddr(&startAddr);
        // Write values
        for (uint32_t i = 0; i < nbItems; i++)
        	HAL_SPI_Transmit(_hspi, &values[i], sizeof(values[i]), HAL_MAX_DELAY);
    _csRELEASE();

    // Reset Memory Write Enable Latch
    _csASSERT();
          spiCMD =FRAM_WRDI;
          HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
    _csRELEASE();

    _lastaddress = startAddr + nbItems - 1;

    return true;
}

bool FRAM_MB85RS_SPI::writeArray( uint32_t startAddr, uint16_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + (nbItems*2) - 2) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;


        uint8_t spiCMD;
           // Set Memory Write Enable Latch, otherwise no Write can be achieve
         _csASSERT();
           spiCMD = FRAM_WREN;
           HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
        _csRELEASE();

    // Write byte operation
    _csASSERT();
          spiCMD = FRAM_WRITE;
          HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
        _setMemAddr(&startAddr);

        // Write values
        for (uint32_t i = 0; i < nbItems; i++)
        {
           uint8_t buffer[2];
           buffer[0] = (values[i] & 0xFF);
           buffer[1] =((values[i] >> 8) & 0xFF);
           HAL_SPI_Transmit(_hspi, &buffer[0], sizeof(buffer[0]), HAL_MAX_DELAY);
           HAL_SPI_Transmit(_hspi, &buffer[1], sizeof(buffer[1]), HAL_MAX_DELAY);
        }
    _csRELEASE();

    // Reset Memory Write Enable Latch
    _csASSERT();
           spiCMD =FRAM_WRDI;
           HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
    _csRELEASE();

    _lastaddress = startAddr + (nbItems*2) - 2;

    return true;
}

bool FRAM_MB85RS_SPI::isAvailable()
{
	if ( _framInitialised && HAL_GPIO_ReadPin(GPIOB,_cs) == GPIO_PIN_SET )
        return true;

    return false;
}

bool FRAM_MB85RS_SPI::enableWP(void)
{
	if (_wp)
    {
		HAL_GPIO_WritePin(GPIOB,_wpPin,GPIO_PIN_SET);
		_wpStatus = true;
        return true;
	}

    return false;
}

bool FRAM_MB85RS_SPI::disableWP()
{
	if (_wp)
    {
		HAL_GPIO_WritePin(GPIOB,_wpPin,GPIO_PIN_RESET);
		_wpStatus = false;
        return true;
	}

    return false;
}

void FRAM_MB85RS_SPI::_csASSERT()
{
	HAL_GPIO_WritePin(GPIOB, _cs, GPIO_PIN_RESET);

}

void FRAM_MB85RS_SPI::_csRELEASE()
{
	HAL_GPIO_WritePin(GPIOB, _cs, GPIO_PIN_SET);
}

bool FRAM_MB85RS_SPI::_getDeviceID()
{
	uint8_t buffer[3] = { 0, 0, 0 };
	uint8_t spiCMD;
    _csASSERT();

    spiCMD = FRAM_RDID;
    HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
    HAL_SPI_Receive(_hspi, &_manufacturer, sizeof(_manufacturer), HAL_MAX_DELAY);
    HAL_SPI_Receive(_hspi, &buffer[0], sizeof(buffer[0]), HAL_MAX_DELAY);
    HAL_SPI_Receive(_hspi, &buffer[1], sizeof(buffer[1]), HAL_MAX_DELAY);
    HAL_SPI_Receive(_hspi, &buffer[2], sizeof(buffer[2]), HAL_MAX_DELAY);

    _csRELEASE();

    /*_csASSERT();
       // Read byte operation
       spiCMD = FRAM_RDSR;
       HAL_SPI_Transmit(_hspi, &spiCMD, sizeof(spiCMD), HAL_MAX_DELAY);
       _csRELEASE();
    */
	/* Shift values to separate IDs */
	_densitycode = buffer[1] &= (1<<5)-1; // Only the 5 first bits
	_productID = (buffer[2] << 8) + buffer[3]; // Is really necessary to read this info ?

	if (_manufacturer == FUJITSU_ID)
    {
        switch (_densitycode)
        {
            case DENSITY_MB85RS64V:
            case DENSITY_MB85RS128B:
            case DENSITY_MB85RS256B:
            case DENSITY_MB85RS512T:
            case DENSITY_MB85RS1MT:
            case DENSITY_MB85RS2MT:
                _density = std::pow(2, _densitycode+3);
                _maxaddress = _density*128;
                break;

            default:
                // F-RAM chip unidentified
                _density = 0;
                _maxaddress = 0;
                return false;
                break;
        }
    } else {
        // F-RAM chip unidentified
        _density = 0;
        _maxaddress = 0;
        return false;
	}


  return true;
}

void FRAM_MB85RS_SPI::_setMemAddr( uint32_t *framAddr )
{
	uint8_t spiAddrByte;

    if (_densitycode >= DENSITY_MB85RS1MT){
    	spiAddrByte =(*framAddr >> 16) & 0xFF;
        HAL_SPI_Transmit(_hspi, &spiAddrByte, sizeof(spiAddrByte), HAL_MAX_DELAY);// Bits 16 to 23
    }
        spiAddrByte =(*framAddr >> 8) & 0xFF;
        HAL_SPI_Transmit(_hspi, &spiAddrByte, sizeof(spiAddrByte), HAL_MAX_DELAY);// Bits 8 to 15

        spiAddrByte = *framAddr & 0xFF;
        HAL_SPI_Transmit(_hspi, &spiAddrByte, sizeof(spiAddrByte), HAL_MAX_DELAY);// MSB, Bits 0 to 7
    _lastaddress = *framAddr;
}
