==> christophepersoz/FRAM_MB85RS_SPI/FRAM_MB85RS_SPI.cpp <==
#include <SPI.h>
#include <FRAM_MB85RS_SPI.h>

boolean FRAM_MB85RS_SPI::read( uint32_t framAddr, uint8_t *value )
{
    if (framAddr >= _maxaddress || !_framInitialised)
        return false;
    
//#ifdef DEBUG_TRACE
//    Serial.print("Read address : ");
//    Serial.println(framAddr, BIN);
//#endif
    
    _csASSERT();
        // Read byte operation
        SPI.transfer(FRAM_READ);
        _setMemAddr(&framAddr);
        // Read value
        *value = SPI.transfer(0);
    _csRELEASE();
    
    _lastaddress = framAddr+1;
    
    return true;
}

boolean FRAM_MB85RS_SPI::read( uint32_t framAddr, uint16_t *value )
{
    if (framAddr >= _maxaddress || !_framInitialised)
        return false;
    
    uint8_t buffer[2];
    
    _csASSERT();
        // Read byte operation
        SPI.transfer(FRAM_READ);
        _setMemAddr(&framAddr);
        // Read value
        buffer[0] = SPI.transfer(0);
        buffer[1] = SPI.transfer(0);
    _csRELEASE();
    
    *value = ((uint16_t) buffer[1] << 8) + (uint16_t)buffer[0];
    
    _lastaddress = framAddr+2;
    
    return true;
}

boolean FRAM_MB85RS_SPI::read( uint32_t framAddr, uint32_t *value )
{
    if (framAddr >= _maxaddress || !_framInitialised)
        return false;
    
    uint8_t buffer[4];
    
    _csASSERT();
        // Read byte operation
        SPI.transfer(FRAM_READ);
        _setMemAddr(&framAddr);
        // Read value
        buffer[0] = SPI.transfer(0);
        buffer[1] = SPI.transfer(0);
        buffer[2] = SPI.transfer(0);
        buffer[3] = SPI.transfer(0);
    _csRELEASE();
   
    *value = ( (uint32_t)buffer[2] << 16) + ((uint32_t)buffer[1] << 8) + (uint32_t)buffer[0];
    
    _lastaddress = framAddr+4;
    
    return true;
}

boolean FRAM_MB85RS_SPI::readArray( uint32_t startAddr, uint8_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + nbItems - 1) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;
    
    _csASSERT();
    // Read byte operation
    SPI.transfer(FRAM_READ);
    _setMemAddr(&startAddr);
    
    // Read values
    for (uint32_t i = 0; i < nbItems; i++)
    {
        values[i] = SPI.transfer(0);
#ifdef DEBUG_TRACE
        Serial.print("Adr 0x"); Serial.print(startAddr+i, HEX);
        Serial.print(", Value[");Serial.print(i); Serial.print("] = 0x"); Serial.println(values[i], HEX);
#endif
    }
    
    _csRELEASE();
    
    _lastaddress = startAddr + nbItems - 1;
    
    return true;
}

boolean FRAM_MB85RS_SPI::readArray( uint32_t startAddr, uint16_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + (nbItems*2) - 2) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;
    
    uint8_t buffer[2];
    
    _csASSERT();
        // Read byte operation
        SPI.transfer(FRAM_READ);
        _setMemAddr(&startAddr);
        
        // Read values
        for (uint32_t i = 0; i < nbItems; i++)
        {
            buffer[0] = SPI.transfer(0);
            buffer[1] = SPI.transfer(0);
            values[i] = ((uint16_t) buffer[1] << 8) + (uint16_t)buffer[0];
            
#ifdef DEBUG_TRACE
            Serial.print("Adr 0x"); Serial.print(startAddr+(i*2), HEX);
            Serial.print(", Value[");Serial.print(i); Serial.print("] = 0x"); Serial.println(values[i], HEX);
#endif
        }
    _csRELEASE();
    
    _lastaddress = startAddr + (nbItems*2) - 2;
    
    return true;
}

boolean FRAM_MB85RS_SPI::writeArray( uint32_t startAddr, uint8_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + nbItems - 1) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;
    
    // Set Memory Write Enable Latch
    _csASSERT();
        SPI.transfer(FRAM_WREN);
    _csRELEASE();
    
    // Write byte operation
    _csASSERT();
        SPI.transfer(FRAM_WRITE);
        _setMemAddr(&startAddr);
        // Write values
        for (uint32_t i = 0; i < nbItems; i++)
            SPI.transfer(values[i]);
    _csRELEASE();
    
    // Reset Memory Write Enable Latch
    _csASSERT();
        SPI.transfer(FRAM_WRDI);
    _csRELEASE();
    
    _lastaddress = startAddr + nbItems - 1;
    
    return true;
}

boolean FRAM_MB85RS_SPI::writeArray( uint32_t startAddr, uint16_t values[], size_t nbItems )
{
    if ( startAddr >= _maxaddress
        || ((startAddr + (nbItems*2) - 2) >= _maxaddress)
        || nbItems == 0
        || !_framInitialised )
        return false;
    
    // Set Memory Write Enable Latch
    _csASSERT();
        SPI.transfer(FRAM_WREN);
    _csRELEASE();
    
    // Write byte operation
    _csASSERT();
        SPI.transfer(FRAM_WRITE);
        _setMemAddr(&startAddr);
        
        // Write values
        for (uint32_t i = 0; i < nbItems; i++)
        {
            SPI.transfer(values[i]);
            SPI.transfer((values[i] >> 8) & 0xFF);
        }
    _csRELEASE();
    
    // Reset Memory Write Enable Latch
    _csASSERT();
        SPI.transfer(FRAM_WRDI);
    _csRELEASE();
    
    _lastaddress = startAddr + (nbItems*2) - 2;
    
    return true;
}

boolean FRAM_MB85RS_SPI::isAvailable()
{
	if ( _framInitialised && digitalReadFast(_cs) == HIGH )
        return true;
    
    return false;
}

boolean FRAM_MB85RS_SPI::enableWP(void)
{
	if (_wp)
    {
		digitalWriteFast(_wpPin,HIGH);
		_wpStatus = true;
        return true;
	}
    
    return false;
}

boolean FRAM_MB85RS_SPI::disableWP()
{
	if (_wp)
    {
		digitalWriteFast(_wpPin,LOW);
		_wpStatus = false;
        return true;
	}
    
    return false;
}

void FRAM_MB85RS_SPI::_csASSERT()
{
    SPI.beginTransaction(SPICONFIG);
    digitalWriteFast(_cs, LOW);
}

void FRAM_MB85RS_SPI::_csRELEASE()
{
    digitalWriteFast(_cs, HIGH);
    SPI.endTransaction();
}

boolean FRAM_MB85RS_SPI::_getDeviceID()
{
	uint8_t buffer[3] = { 0, 0, 0 };
    
    _csASSERT();
    
    SPI.transfer(FRAM_RDID);
    _manufacturer = SPI.transfer(0);
    buffer[0] = SPI.transfer(0);
    buffer[1] = SPI.transfer(0);
    buffer[2] = SPI.transfer(0);
    
    _csRELEASE();

	/* Shift values to separate IDs */
	_densitycode = buffer[1] &= (1<<5)-1; // Only the 5 first bits
	_productID = (buffer[2] << 8) + buffer[3]; // Is really necessary to read this info ?

	if (_manufacturer == FUJITSU_ID)
    {
        switch (_densitycode)
        {
            case DENSITY_MB85RS64V:
            case DENSITY_MB85RS128B:
            case DENSITY_MB85RS256B:
            case DENSITY_MB85RS512T:
            case DENSITY_MB85RS1MT:
            case DENSITY_MB85RS2MT:
                _density = pow (2, _densitycode+3);
                _maxaddress = _density*128;
                break;

            default:
                // F-RAM chip unidentified
                _density = 0;
                _maxaddress = 0;
                return false;
                break;
        }
    } else {
        // F-RAM chip unidentified
        _density = 0;
        _maxaddress = 0;
        return false;
	}
    

  return true;
}

void FRAM_MB85RS_SPI::_setMemAddr( uint32_t *framAddr )
{
    SPI.transfer(*framAddr & 0xFF);  // MSB, Bits 0 to 7
    SPI.transfer((*framAddr >> 8) & 0xFF);    // Bits 8 to 15
    if (_densitycode >= DENSITY_MB85RS1MT)
        SPI.transfer((*framAddr >> 16) & 0xFF);  // Bits 16 to 23
    
    _lastaddress = *framAddr;
}
